--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -5,3 +5,8 @@ api_platform:
         json: ['application/merge-patch+json']
     swagger:
         versions: [3]
+# api/config/packages/api_platform.yaml
+        api_keys:
+             apiKey:
+                name: Authorization
+                type: header
